pxc/tests/test_001_px/sta8.px
public namespace sta8;
import common -;


union foo {
  public int first;
  public int second;
}

function void func(int mutable& a)
{
  a = 3;
}

function void sttest1()
{
  foo x;
  x.first = 5;
  func(x.first); // error
  println(x.first);
}

sttest1();

